# data-analysis

./: .dockerignore  .env.cloud.example  .env.example  .env.runpod.example  .gitignore  AGENTS.md  ARCHITECTURE_NOTES.md  Dockerfile  Dockerfile.gpu  HANDOFF.md  MIGRATION_PLAN.md  Makefile  README.md  TODO.md  alembic.ini  docker-compose.cloud-mvp.yml  docker-compose.cloud.yml  docker-compose.local.yml  docker-compose.postgres.yml  manage.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements-cloud.txt  requirements-dev.txt  requirements-gpu.txt  requirements-native.txt  requirements.txt
alembic/: env.py
configs/: autoscaling.yaml  backtest.yaml  backtest_mvp.yaml  cloud_mvp.yaml  cost_limits.yaml  evaluate.yaml  evaluate_mvp.yaml  feature_store.yaml  features.yaml  features_mvp.yaml  ingest.yaml  ingest_sample.yaml  model.yaml  model_baseline.yaml  model_fin_mamba_small.yaml  model_samba_small.yaml  panel.yaml  pipeline_gpu_runpod.yaml  pipeline_local_mvp.yaml  pipeline_mvp.yaml  predict.yaml  predict_mvp.yaml  preprocess.yaml  preprocess_mvp.yaml  rate_limits.yaml  risk.yaml  risk_mvp.yaml  samba.yaml  sliding_window.yaml  sliding_window_mvp.yaml  train.yaml  train_baseline.yaml  train_fin_mamba_small.yaml  train_gpu.yaml  train_gpu_runpod.yaml  train_samba_small.yaml  train_sliding.yaml
docs/: api_facade.md  cli.md  cloud_student_setup.md  compliance_market_data.md  compute_profiles.md  control_dashboard.md  database_compatibility.md  deployment_mvp.md  duckdb_warehouse.md  feature_flags.md  feature_pipeline.md  final_acceptance.md  final_deliverables.md  finance_graph_model.md  finance_quant_inventory.md  finance_quant_refactor_phases.md  financial_data_ingestion.md  ingestion_pipeline.md  local_low_end_setup.md  market_intelligence.md  marketlab.md  marketlab_leakage.md  marketlab_shuffling_tda.md  (+26 more)
(+1249 files in other folders)
