[project]
name = "public-source-monitor"
version = "0.1.0"
description = "Django ingestion app for public-source monitoring with SQLite and Arrow exports."
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<6.0",
    "fastapi>=0.115,<1.0",
    "gunicorn>=22.0,<24.0",
    "pandas>=2.2,<3.0",
    "networkx>=3.3,<4.0",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "playwright>=1.42",
    "SQLAlchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "duckdb>=1.0,<2.0",
    "PyYAML>=6.0,<7.0",
    "typing_extensions>=4.12",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.4",
]
nlp = [
    "spacy>=3.7,<4.0",
    "scikit-learn>=1.4,<2.0",
    "vaderSentiment>=3.3,<4.0",
    "yake>=0.4,<0.5",
    "rake-nltk>=1.0,<2.0",
    "sentence-transformers>=2.7,<4.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
